k8s/linkto/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: http
  selector:
    tier: backend
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: http
  selector:
    tier: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: redis
  selector:
    tier: redis
