k8s/linkto/base/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - host: link.withtanzu.com
      http:
        paths:
          - backend:
              serviceName: frontend
              servicePort: 8080
